--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "bulletin-board",
+  "name": "candle-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "run-p start:* ",
     "start-silent": "run-p start > /dev/null",
     "start:react": "react-scripts start",
-    "start-and-test": "run-p start-silent test ",
     "build": "react-scripts build",
-    "test": "react-scripts test --noStackTrace",
-    "test-all": "react-scripts test --watchAll=false --noStackTrace",
-    "test-related": "react-scripts test --watchAll=false --noStackTrace --findRelatedTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "data:import": "node backend/seederScript.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
+
   "lint-staged": {
     "src/**/*.js": [
       "yarn test-related --",
@@ -37,22 +30,33 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
-    "clsx": "^1.0.4",
+    "clsx": "^1.1.1",
+    "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "express": "^4.17.1",
+    "mongodb": "4.2.0",
+    "mongoose": "^6.0.13",
     "node-sass": "^4.13.0",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.4.0",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "husky": "^3.1.0",
