--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "husky": "^3.1.0",
-    "lint-staged": "^9.4.3",
-    "redux-devtools-extension": "^2.13.9"
+    "lint-staged": "^9.4.3"
   }
 }
