--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://paukol:1234567890@cluster0.73vtl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://paukol:1234567890@cluster0.73vtl.mongodb.net/CandleStore?retryWrites=true&w=majority
