--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:react": "react-scripts start",
     "server": "npx nodemon backend/server.js",
     "start-and-test": "run-p start-silent test ",
-   
+    "test": "react-scripts test --noStackTrace",
+    "test-all": "react-scripts test --watchAll=false --noStackTrace",
+    "test-related": "react-scripts test --watchAll=false --noStackTrace --findRelatedTests",
     "build": "yarn install && react-scripts build",
     "eject": "react-scripts eject",
     "data:import": "node backend/seederScript.js"
@@ -31,7 +33,12 @@
       "last 1 safari version"
     ]
   },
- 
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
